--- a/farmer/templates/farmers.html
+++ b/farmer/templates/farmers.html
@@ -4,6 +4,26 @@
 Registered Farmers
 {% endblock %}
 
+{% block style %}
+ <style>
+    table {
+        font-family: arial, sans-serif;
+        border-collapse: collapse;
+        width: 100%;
+    }
+
+    td, th {
+        border: 1px solid #dddddd;
+        text-align: left;
+        padding: 8px;
+    }
+
+    tr:nth-child(even) {
+        background-color: #dddddd;
+    }
+</style> 
+{% endblock %}
+
 {% block content %}
 <article>
     <table>
