--- a/farmer/templates/base.html
+++ b/farmer/templates/base.html
@@ -12,24 +12,8 @@
 
         <script src="{{ url_for('static', filename='js/vendor/modernizr-2.8.3-respond-1.4.2.min.js') }}"></script>
 
-        <style>
-            table {
-                font-family: arial, sans-serif;
-                border-collapse: collapse;
-                width: 100%;
-            }
+        {% block style %}{% endblock %}
 
-            td, th {
-                border: 1px solid #dddddd;
-                text-align: left;
-                padding: 8px;
-            }
-
-            tr:nth-child(even) {
-                background-color: #dddddd;
-            }
-        </style> 
-        
     </head>
     <body>
         <div class="header-container">
