--- a/farmer/templates/dashboard.html
+++ b/farmer/templates/dashboard.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{% block title %}{% endblock %}</title>
+        <title>Admin Dashboard</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -11,24 +11,32 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css')}}">
 
         <script src="{{ url_for('static', filename='js/vendor/modernizr-2.8.3-respond-1.4.2.min.js') }}"></script>
+        <style>
+            table {
+                font-family: arial, sans-serif;
+                border-collapse: collapse;
+                width: 100%;
+            }
 
-        {% block style %}{% endblock %}
+            td, th {
+                border: 1px solid #dddddd;
+                text-align: left;
+                padding: 8px;
+            }
 
+            tr:nth-child(even) {
+                background-color: #dddddd;
+            }
+        </style>
     </head>
     <body>
         <div class="header-container">
             <header class="wrapper clearfix">
-                <a href="{{ url_for('index') }}"><h1 class="title">Expert Farming System</h1></a>
+                <a href="{{ url_for('dashboard') }}"><h1 class="title">Admin Portal</h1></a>
                 <nav>
                     <ul>
-                        {% if current_user.is_authenticated %}
-                            <li><a href="{{ url_for('viewFarmers')}}">View Farmers</a></li>
-                            <li><a href="{{ url_for('index')}}">Current Requests</a></li>
-                            <li><a href="{{ url_for('logout') }}">Sign Out</a></li>
-                        {% else %}
-                            <li><a href="{{ url_for('signup') }}">Sign Up</a></li>
-                            <li><a href="{{ url_for('login') }}">Sign In</a></li>
-                        {% endif %}
+                        <li><a href="{{ url_for('addUser')}}">Add User</a></li>
+                        <li><a href="{{ url_for('logout') }}">Sign Out</a></li>
                     </ul>
                 </nav>
             </header>
@@ -48,11 +56,27 @@
                         {% endif %}
                     {% endwith %}
                 </article>
+                
+                <article>
+                    <table>
+                        <tr>
+                            <th>Username </th>
+                            <th>email</th>
+                            <th>Role</th>
+                        </tr>
+                        {% for user in users %}
+                            <tr>
+                                <td>{{ user.username }}</td>
+                                <td>{{ user.email }}</td>
+                                <td>{{ user.role }}</td>
+                            </tr>
+                        {% endfor %}
+                    </table>
+                </article>
 
-                {% block content %}{% endblock %}
                 <aside>
                     <h3>aside</h3>
-                    <i>No Requests Yet</i>
+                    <i>No Lectures Yet</i>
                 </aside>
 
             </div> <!-- #main -->
@@ -60,7 +84,7 @@
 
         <div class="footer-container">
             <footer class="wrapper">
-                <h3>Harare Institute of Technology @ HIT400</h3>
+                <h3>Harare Institute of Technology @ HIT200</h3>
             </footer>
         </div>
 
@@ -70,3 +94,4 @@
         <script src="{{ url_for('static', filename='js/main.js') }}"></script>
     </body>
 </html>
+
