--- a/farmer/templates/login.html
+++ b/farmer/templates/login.html
@@ -2,7 +2,7 @@
 {% from "form_macros.html" import render_field %}
 
 {% block title %}
-Online Marker -- login
+E-Vet -- login
 {% endblock %}
 
 {% block content %}
