--- a/farmer/templates/signup.html
+++ b/farmer/templates/signup.html
@@ -2,7 +2,7 @@
 {% from "form_macros.html" import render_field %}
 
 {% block title %}
-Online Marking -- Signup
+E-Vet-- Signup
 {% endblock %}
 
 {% block content %}
