--- a/farmer/templates/base.html
+++ b/farmer/templates/base.html
@@ -18,7 +18,7 @@
     <body>
         <div class="header-container">
             <header class="wrapper clearfix">
-                <a href="{{ url_for('index') }}"><h1 class="title">E-Vet/h1></a>
+                <a href="{{ url_for('index') }}"><h1 class="title">E-Vet</h1></a>
                 <nav>
                     <ul>
                         {% if current_user.is_authenticated %}
