--- a/farmer/templates/base.html
+++ b/farmer/templates/base.html
@@ -55,6 +55,7 @@
                     <ul>
                         <li><a href="{{ url_for('profile',id=current_user.id)}}"><i>Edit Profile</i></a></li>
                         <li><a href="{{ url_for('addDiesease')}}"><i>Add Disease</i></a></li>
+                        <li><a href="{{ url_for('diseases')}}"><i>All Diseases</i></a></li>
                     </ul>
                 </aside>
 
