--- a/farmer/templates/diseases.html
+++ b/farmer/templates/diseases.html
@@ -35,8 +35,8 @@ All Diseases
         {% for disease in diseases %}
             <tr>
                 <td>{{ disease.name }}</td>
-                <td>{{ disease.surname }}</td>
-                <td>{{ disease.location }}</td>
+                <td>{{ disease.symptoms}}</td>
+                <td>{{ disease.remedy }}</td>
             </tr>
         {% endfor %}
     </table>
