--- a/farmer/templates/diseases.html
+++ b/farmer/templates/diseases.html
@@ -30,7 +30,7 @@ All Diseases
         <tr>
             <th>Name</th>
             <th>Symptoms</th>
-            <th>Rememdy</th>
+            <th>Remedy</th>
         </tr>
         {% for disease in diseases %}
             <tr>
