--- a/farmer/templates/base.html
+++ b/farmer/templates/base.html
@@ -14,6 +14,9 @@
 
         {% block style %}{% endblock %}
 
+        {{ moment.include_jquery() }}
+        {{ moment.include_moment() }}
+
     </head>
     <body>
         <div class="header-container">
