--- a/farmer/templates/diseases.html
+++ b/farmer/templates/diseases.html
@@ -29,14 +29,12 @@ All Diseases
     <table>
         <tr>
             <th>Name</th>
-            <th>Category</th>
             <th>Symptoms</th>
             <th>Remedy</th>
         </tr>
         {% for disease in diseases %}
             <tr>
-                <td><a href="{{ url_for('disease', name=disease.name )}}"> {{disease.name }}</a></td>
-                <td>{{ disease.category }}</td>
+                <td>{{ disease.name }}</td>
                 <td>{{ disease.symptoms}}</td>
                 <td>{{ disease.remedy }}</td>
             </tr>
