--- a/farmer/templates/signup.html
+++ b/farmer/templates/signup.html
@@ -1,29 +1,87 @@
-{% extends "base.html" %}
 {% from "form_macros.html" import render_field %}
 
-{% block title %}
-E-Vet-- Signup
-{% endblock %}
+{% from "form_macros.html" import render_field %}
 
-{% block content %}
-	<section>
-		<h1 style="clear: both">Create an Account</h1>
-		<form action="{{ url_for('signup') }}" method="post" name="signup">
-			{{ form.hidden_tag() }}
-			<table>
-				{{ render_field(form.username, size=50) }}
-				{{ render_field(form.email, size=50) }}
-				{{ render_field(form.password, size=50) }}
-				{{ render_field(form.password2, size=50) }}
+<!doctype html>
+<html class="no-js" lang="">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>E- vet -- signup</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-				<tr class="submit">
-					<td></td>
-					<td><button type="submit">Submit</button></td>
-				</tr>
-			</table>
-		</form>
-	</section>
-{% endblock %}
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.min.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css')}}">
 
-{% block sidebar %}
-{% endblock %}
+        <script src="{{ url_for('static', filename='js/vendor/modernizr-2.8.3-respond-1.4.2.min.js') }}"></script>
+
+
+    </head>
+    <body>
+        <div class="header-container">
+            <header class="wrapper clearfix">
+                <a href="{{ url_for('index') }}"><h1 class="title">E-Vet</h1></a>
+                <nav>
+                    <ul>
+                        {% if current_user.is_authenticated %}
+                            <li><a href="{{ url_for('viewFarmers')}}">View Farmers</a></li>
+                            <li><a href="{{ url_for('index')}}">Current Requests</a></li>
+                            <li><a href="{{ url_for('logout') }}">Sign Out</a></li>
+                        {% else %}
+                            <li><a href="{{ url_for('signup') }}">Sign Up</a></li>
+                            <li><a href="{{ url_for('login') }}">Sign In</a></li>
+                        {% endif %}
+                    </ul>
+                </nav>
+            </header>
+        </div>
+
+        <div class="main-container">
+            <div class="main wrapper clearfix">
+
+                <article class=flashes>
+                    {% with messages = get_flashed_messages() %}
+                        {% if messages %}
+                            <ul>
+                            {% for message in messages %}
+                                <li>{{ message }}</li>
+                            {% endfor %}
+                            </ul>
+                        {% endif %}
+                    {% endwith %}
+                </article>
+
+                <section>
+					<h1 style="clear: both">Create an Account</h1>
+					<form action="{{ url_for('signup') }}" method="post" name="signup">
+						{{ form.hidden_tag() }}
+						<table>
+							{{ render_field(form.username, size=50) }}
+							{{ render_field(form.email, size=50) }}
+							{{ render_field(form.password, size=50) }}
+							{{ render_field(form.password2, size=50) }}
+
+							<tr class="submit">
+								<td></td>
+								<td><button type="submit">Submit</button></td>
+							</tr>
+						</table>
+					</form>
+				</section>
+
+            </div> <!-- #main -->
+        </div> <!-- #main-container -->
+
+        <div class="footer-container">
+            <footer class="wrapper">
+                <h3>Harare Institute of Technology @ HIT400</h3>
+            </footer>
+        </div>
+
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="{{ url_for("static",filename="js/vendor/jquery-1.11.2.min.js") }}"><\/script>')</script>
+
+        <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+    </body>
+</html>
