Added Admin functionality

--- a/farmer/templates/addDiesease.html
+++ b/farmer/templates/addDiesease.html
@@ -13,6 +13,7 @@ E-Vet -- Add Disease
         {{ render_field(form.category)}}
         {{ render_field(form.symptoms) }}
         {{ render_field(form.remedy) }}
+        {{ render_field(form.shona_remedy) }}
         {{ render_field(form.submit) }}
     </table>
 </form>
