--- a/farmer/templates/disease.html
+++ b/farmer/templates/disease.html
@@ -15,6 +15,7 @@ E-Vet-- Disease
 				{{ render_field(form.category) }}
 				{{ render_field(form.symptoms) }}
 				{{ render_field(form.remedy) }}
+				{{ render_field(form.shona_remedy) }}
 
 				<tr class="submit">
 					<td></td>
