--- a/farmer/templates/addUser.html
+++ b/farmer/templates/addUser.html
@@ -1,9 +1,13 @@
+{% from "form_macros.html" import render_field %}
+
+{% from "form_macros.html" import render_field %}
+
 <!doctype html>
 <html class="no-js" lang="">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Admin Dashboard</title>
+        <title>E- vet -- signup</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -11,23 +15,8 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css')}}">
 
         <script src="{{ url_for('static', filename='js/vendor/modernizr-2.8.3-respond-1.4.2.min.js') }}"></script>
-        <style>
-            table {
-                font-family: arial, sans-serif;
-                border-collapse: collapse;
-                width: 100%;
-            }
 
-            td, th {
-                border: 1px solid #dddddd;
-                text-align: left;
-                padding: 8px;
-            }
 
-            tr:nth-child(even) {
-                background-color: #dddddd;
-            }
-        </style>
     </head>
     <body>
         <div class="header-container">
@@ -57,35 +46,31 @@
                         {% endif %}
                     {% endwith %}
                 </article>
-                
-                <article>
-                    <table>
-                        <tr>
-                            <th>Username </th>
-                            <th>email</th>
-                            <th></th>
-                        </tr>
-                        {% for user in users %}
-                            <tr>
-                                <td>{{ user.username }}</td>
-                                <td>{{ user.email }}</td>
-                                <td><a href="{{ url_for('delete', id=user.id) }}">Remove expert</a></td>
-                            </tr>
-                        {% endfor %}
-                    </table>
-                </article>
 
-                <aside>
-                    <h3>aside</h3>
-                    <i>No Lectures Yet</i>
-                </aside>
+                <section>
+					<h1 style="clear: both">Add A New User</h1>
+					<form action="{{ url_for('addUser') }}" method="post" name="addUser">
+						{{ form.hidden_tag() }}
+						<table>
+							{{ render_field(form.username, size=50) }}
+							{{ render_field(form.email, size=50) }}
+							{{ render_field(form.password, size=50) }}
+							{{ render_field(form.password2, size=50) }}
+
+							<tr class="submit">
+								<td></td>
+								<td><button type="submit">Submit</button></td>
+							</tr>
+						</table>
+					</form>
+				</section>
 
             </div> <!-- #main -->
         </div> <!-- #main-container -->
 
         <div class="footer-container">
             <footer class="wrapper">
-                <h3>Harare Institute of Technology @ HIT200</h3>
+                <h3>Harare Institute of Technology @ HIT400</h3>
             </footer>
         </div>
 
@@ -95,4 +80,3 @@
         <script src="{{ url_for('static', filename='js/main.js') }}"></script>
     </body>
 </html>
-
