--- a/farmer/templates/responses.html
+++ b/farmer/templates/responses.html
@@ -38,7 +38,7 @@ All responses
                 <td>{{response.content }}</td>
                 <td>{{ response.name }}</td>
                 <td>{{ response.response}}</td>
-                <td><a href="">Send Message to farmer</a></td>
+                <!--<td><a href="">Send Message to farmer</a></td>-->
             </tr>
         {% endfor %}
     </table>
