--- a/farmer/static/css/main.css
+++ b/farmer/static/css/main.css
@@ -70,18 +70,18 @@ body {
    =================== */
 
 .header-container {
-    border-bottom: 20px solid #e44d26;
+    border-bottom: 20px solid #00c100;
 }
 
 .footer-container,
 .main aside {
-    border-top: 20px solid #e44d26;
+    border-top: 20px solid #00c600;
 }
 
 .header-container,
 .footer-container,
 .main aside {
-    background: #f16529;
+    background: #002f00;
 }
 
 .title {
@@ -108,7 +108,7 @@ nav a {
     font-weight: bold;
 
     color: white;
-    background: #e44d26;
+    background: #006200;
 }
 
 nav a:hover,
