--- a/farmer/templates/base.html
+++ b/farmer/templates/base.html
@@ -83,7 +83,8 @@
 
         <div class="footer-container">
             <footer class="wrapper">
-                <h3>Harare Institute of Technology @ HIT400</h3>
+                <h3 style="float:left;">Harare Institute of Technology @ HIT400</h3>
+                <img style="float:right;" src="{{ url_for('static', filename='img/footer.png')}}">
             </footer>
         </div>
 
