--- a/farmer/templates/addUser.html
+++ b/farmer/templates/addUser.html
@@ -47,7 +47,7 @@
                     {% endwith %}
                 </article>
 
-                <section>
+                <article>
 					<h1 style="clear: both">Add A New User</h1>
 					<form action="{{ url_for('addUser') }}" method="post" name="addUser">
 						{{ form.hidden_tag() }}
@@ -63,7 +63,7 @@
 							</tr>
 						</table>
 					</form>
-				</section>
+				</article>
 
             </div> <!-- #main -->
         </div> <!-- #main-container -->
