--- a/farmer/templates/addUser.html
+++ b/farmer/templates/addUser.html
@@ -56,6 +56,7 @@
 							{{ render_field(form.email, size=50) }}
 							{{ render_field(form.password, size=50) }}
 							{{ render_field(form.password2, size=50) }}
+                            {{ render_field(form.phone, size=50) }}
 
 							<tr class="submit">
 								<td></td>
