--- a/farmer/templates/profile.html
+++ b/farmer/templates/profile.html
@@ -14,6 +14,7 @@ E-Vet-- Profile
 				{{ render_field(form.username, size=50) }}
 				{{ render_field(form.email, size=50) }}
 				{{ render_field(form.region, size=50) }}
+				{{ render_field(form.phone, size=50) }}
 
 				<tr class="submit">
 					<td></td>
