--- a/farmer/static/css/main.css
+++ b/farmer/static/css/main.css
@@ -154,8 +154,14 @@ nav a:hover {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+aside a:hover,
+aside a:visited {
+    color: white;
+}
 
-
+aside a {
+    color: white;
+}
 
 
 
